# week6_exercises

./: README.md
Automata_Example/: CMakeLists.txt
Automata_Example/include/: automaton.h
Automata_Example/source/: CMakeLists.txt  automaton.cpp  main.cpp
Automata_Example/test/: CMakeLists.txt  tests.cpp
Timing/: CMakeLists.txt
Timing/source/: CMakeLists.txt  main.cpp
code_fix/: CMakeLists.txt  main.cpp
code_fix/.devcontainer/: devcontainer.json
